--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
 }
 
 .navbar {
-  height: 40px;
+  height: 70px;
   width: 100%;
   background-color: rgb(48, 136, 107);
 }
@@ -11,15 +11,16 @@ body {
 .left {
   height: 100%;
   width: 50%;
-  font-size: 25px;
+  font-size: larger;
   float: left;
 }
 
 .right {
+  text-align: right;
   height: 100%;
   width: 50%;
   float: right;
-  font-size: 25px;
+  font-size: larger;
 }
 
 .wrapper {
@@ -31,12 +32,11 @@ body {
 }
 
 .logbtn {
-  margin-left: 213px;
-  margin-top: 50px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-left: 41%;
+  padding-left: 4%;
+  padding-right: 4%;
+  padding-top: 3%;
+  padding-bottom: 3%;
   background-color: rgb(44, 44, 238);
   color: aliceblue;
   font-size: medium;
@@ -49,8 +49,8 @@ body {
 }
 
 .try-btn{
-  margin-top: 50px;
-  margin-left: 150px;
+  margin-top: 10%;
+  margin-left: 30%;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 10px;
@@ -73,20 +73,20 @@ body {
 }
 
 .form {
-  height: 150px;
+  margin-top: 20%;
+  height: 50%;
   font-size: larger;
-  display: flex;
   align-items: center;
 }
 
 .player1 {
-  margin-right: 50px;
-  margin-left: 20px;
+  margin-top: 0px;
+  margin-left: 30%;
 }
 
 .player2 {
-  margin-bottom: 2px;
-  margin-right: 0px;
+  margin-top: 50%;
+  margin-left: 30%;
 }
 
 .square {
@@ -106,4 +106,10 @@ body {
   width: 302px;
   display: grid;
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+}
+
+input {
+  text-align: left;
+  width: 40%;
+  margin-left: 30%;
 }
