--- a/src/App.css
+++ b/src/App.css
@@ -49,24 +49,24 @@ body {
 }
 
 .try-btn{
-  margin-top: 10%;
-  margin-left: 30%;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 5%;
+  margin-left: 5%;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 1%;
+  padding-bottom: 1%;
   background-color: rgb(44, 44, 238);
   color: aliceblue;
   font-size: medium;
 }
 
 .new-btn {
-  margin-top: 150px;
-  margin-left: 143px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  margin-top: 5%;
+  margin-left: 5%;
+  padding-left: 3%;
+  padding-right: 3%;
+  padding-top: 1%;
+  padding-bottom: 1%;
   background-color: rgb(44, 44, 238);
   color: aliceblue;
   font-size: medium;
@@ -112,4 +112,8 @@ input {
   text-align: left;
   width: 40%;
   margin-left: 30%;
+}
+
+#modal-modal-title{
+  text-align: center;
 }
